2007-05-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Handle CRLF line endings in source files.

	* mcsource.c: Add numerous additional comments.
	(mc_source): Add `last_char' local variable; use it to implement
	one character look ahead, to suppress emission of extraneous CRs
	into the compiled message text, when immediately followed by LF.
	(mc_workspace_wanted, mc_update_workspace): Mark as `inline'.
	(mc_add_escape): Mark as `inline'.

2007-05-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* mcsource.c (mc_source): Adjust block nesting to correct logic
	defect introduced in revision 1.7 (2007-05-14).
	[DEBUG]: Tidy up formatting of some ugly debugging messages.

2007-05-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* mcsource.c (mc_source): Close `input_fd' prior to every use
	of `return', when returning abnormally.

2007-05-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Support all escape sequences required by POSIX 1003.1.

	* mcsource.c (OCTAL_SEQUENCE_DECODE): New manifest constant.
	(HEXADECIMAL_SEQUENCE_DECODE): Ditto, but not currently used.
	(mc_source): Interpret "\n", "\r", "\b", "\t", "\v" and "\f"
	standard escapes, and also "\ddd" generic octal digit sequence
	escapes, appearing in message text definitions; "\\" is also
	implicitly handled as required.

2007-05-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add support for `delset' directive.

	* mcmerge.c (mc_delset): New static function...
	(mc_merge): Use it.

	* include/gcmsgs.h (MSG_DEL_UNSUPPORTED): Redundant message
	definition; deleted.

2007-05-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add support for single message deletion.

	* mcsource.c: More comment improvements.
	(mc_source): Set `this->base = NULL' on parsing a message number
	immediately followed by `newline'; this causes the message to be
	removed from the internal catalogue index, when the input record
	is merged.
